--- a/Demo20210108.ipynb
+++ b/Demo20210108.ipynb
@@ -3501,6 +3501,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yGLK64i6RH_Z"
+      },
+      "source": [
+        "## Autoencoder\n",
+        "- https://github.com/ywchiu/tibamedl/blob/master/AutoEncoder/Credit%20Card%20Fraud%20Detection.ipynb"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "SEkbk8LYOwia"
