--- a/Demo20210108.ipynb
+++ b/Demo20210108.ipynb
@@ -1354,7 +1354,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 283
+          "height": 282
         },
         "id": "9IPZrhO23trd",
         "outputId": "ad562c68-afed-46ec-bd6c-5c00c69920a8"
@@ -1397,7 +1397,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 283
+          "height": 282
         },
         "id": "3krEVT6e4Si5",
         "outputId": "e4dd0449-ef93-4451-b6d0-3707bdae11db"
@@ -1759,7 +1759,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 222
+          "height": 215
         },
         "id": "lZjVdQ-d6k4M",
         "outputId": "d6bce590-85e7-4a4f-e58c-5054fa8b026f"
@@ -3511,15 +3511,306 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "SEkbk8LYOwia"
+        "id": "IRRllE1YSyR9"
       },
       "source": [
-        ""
+        "## Car Damage"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SEkbk8LYOwia",
+        "outputId": "cf92e15c-50d2-4bc1-c2aa-dff400e5530c"
+      },
+      "source": [
+        "! wget https://raw.githubusercontent.com/ywchiu/fubondl/main/data/archive.zip"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-01-08 09:19:37--  https://raw.githubusercontent.com/ywchiu/fubondl/main/data/archive.zip\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 15120245 (14M) [application/zip]\n",
+            "Saving to: ‘archive.zip’\n",
+            "\n",
+            "archive.zip         100%[===================>]  14.42M  67.4MB/s    in 0.2s    \n",
+            "\n",
+            "2021-01-08 09:19:38 (67.4 MB/s) - ‘archive.zip’ saved [15120245/15120245]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MoktuvkpS0wx",
+        "outputId": "7dfd7717-3229-41c2-bd9e-596ac96460d5"
+      },
+      "source": [
+        "! unzip archive.zip"
+      ],
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Archive:  archive.zip\n",
+            "  inflating: img/1.jpg               \n",
+            "  inflating: img/10.jpg              \n",
+            "  inflating: img/13.jpg              \n",
+            "  inflating: img/14.jpg              \n",
+            "  inflating: img/15.jpg              \n",
+            "  inflating: img/16.jpg              \n",
+            "  inflating: img/17.jpg              \n",
+            "  inflating: img/18.jpg              \n",
+            "  inflating: img/19.jpg              \n",
+            "  inflating: img/2.jpg               \n",
+            "  inflating: img/20.jpg              \n",
+            "  inflating: img/21.jpg              \n",
+            "  inflating: img/22.jpg              \n",
+            "  inflating: img/23.jpg              \n",
+            "  inflating: img/24.jpg              \n",
+            "  inflating: img/25.jpg              \n",
+            "  inflating: img/26.jpg              \n",
+            "  inflating: img/27.jpg              \n",
+            "  inflating: img/29.jpg              \n",
+            "  inflating: img/3.jpg               \n",
+            "  inflating: img/30.jpg              \n",
+            "  inflating: img/31.jpg              \n",
+            "  inflating: img/32.jpg              \n",
+            "  inflating: img/33.jpg              \n",
+            "  inflating: img/34.jpg              \n",
+            "  inflating: img/36.jpg              \n",
+            "  inflating: img/37.jpg              \n",
+            "  inflating: img/38.jpg              \n",
+            "  inflating: img/39.jpg              \n",
+            "  inflating: img/4.jpg               \n",
+            "  inflating: img/40.jpg              \n",
+            "  inflating: img/41.jpg              \n",
+            "  inflating: img/42.jpg              \n",
+            "  inflating: img/43.jpg              \n",
+            "  inflating: img/44.jpg              \n",
+            "  inflating: img/46.jpg              \n",
+            "  inflating: img/47.jpg              \n",
+            "  inflating: img/48.jpg              \n",
+            "  inflating: img/49.jpg              \n",
+            "  inflating: img/5.jpg               \n",
+            "  inflating: img/50.jpg              \n",
+            "  inflating: img/51.jpg              \n",
+            "  inflating: img/52.jpg              \n",
+            "  inflating: img/53.jpg              \n",
+            "  inflating: img/54.jpg              \n",
+            "  inflating: img/55.jpg              \n",
+            "  inflating: img/56.jpg              \n",
+            "  inflating: img/57.jpg              \n",
+            "  inflating: img/58.jpg              \n",
+            "  inflating: img/59.jpg              \n",
+            "  inflating: img/6.jpg               \n",
+            "  inflating: img/61.jpg              \n",
+            "  inflating: img/62.jpg              \n",
+            "  inflating: img/63.jpg              \n",
+            "  inflating: img/64.jpg              \n",
+            "  inflating: img/68.jpg              \n",
+            "  inflating: img/69.jpg              \n",
+            "  inflating: img/7.jpg               \n",
+            "  inflating: img/70.jpg              \n",
+            "  inflating: img/71.jpg              \n",
+            "  inflating: img/73.jpg              \n",
+            "  inflating: img/74.jpg              \n",
+            "  inflating: img/75.jpg              \n",
+            "  inflating: img/76.jpg              \n",
+            "  inflating: img/77.jpg              \n",
+            "  inflating: img/78.jpg              \n",
+            "  inflating: img/79.jpg              \n",
+            "  inflating: img/8.jpg               \n",
+            "  inflating: img/80.jpg              \n",
+            "  inflating: img/9.jpg               \n",
+            "  inflating: test/11.jpg             \n",
+            "  inflating: test/12.jpg             \n",
+            "  inflating: test/28.jpg             \n",
+            "  inflating: test/45.jpg             \n",
+            "  inflating: test/60.jpg             \n",
+            "  inflating: test/66.jpg             \n",
+            "  inflating: test/67.jpg             \n",
+            "  inflating: test/72.jpg             \n",
+            "  inflating: train/10.jpg            \n",
+            "  inflating: train/13.jpg            \n",
+            "  inflating: train/14.jpg            \n",
+            "  inflating: train/15.jpg            \n",
+            "  inflating: train/16.jpg            \n",
+            "  inflating: train/17.jpg            \n",
+            "  inflating: train/18.jpg            \n",
+            "  inflating: train/19.jpg            \n",
+            "  inflating: train/2.jpg             \n",
+            "  inflating: train/20.jpg            \n",
+            "  inflating: train/21.jpg            \n",
+            "  inflating: train/23.jpg            \n",
+            "  inflating: train/25.jpg            \n",
+            "  inflating: train/26.jpg            \n",
+            "  inflating: train/27.jpg            \n",
+            "  inflating: train/29.jpg            \n",
+            "  inflating: train/30.jpg            \n",
+            "  inflating: train/31.jpg            \n",
+            "  inflating: train/33.jpg            \n",
+            "  inflating: train/34.jpg            \n",
+            "  inflating: train/36.jpg            \n",
+            "  inflating: train/37.jpg            \n",
+            "  inflating: train/38.jpg            \n",
+            "  inflating: train/39.jpg            \n",
+            "  inflating: train/4.jpg             \n",
+            "  inflating: train/40.jpg            \n",
+            "  inflating: train/41.jpg            \n",
+            "  inflating: train/43.jpg            \n",
+            "  inflating: train/44.jpg            \n",
+            "  inflating: train/46.jpg            \n",
+            "  inflating: train/47.jpg            \n",
+            "  inflating: train/48.jpg            \n",
+            "  inflating: train/49.jpg            \n",
+            "  inflating: train/5.jpg             \n",
+            "  inflating: train/50.jpg            \n",
+            "  inflating: train/51.jpg            \n",
+            "  inflating: train/52.jpg            \n",
+            "  inflating: train/53.jpg            \n",
+            "  inflating: train/54.jpg            \n",
+            "  inflating: train/55.jpg            \n",
+            "  inflating: train/56.jpg            \n",
+            "  inflating: train/57.jpg            \n",
+            "  inflating: train/58.jpg            \n",
+            "  inflating: train/59.jpg            \n",
+            "  inflating: train/6.jpg             \n",
+            "  inflating: train/61.jpg            \n",
+            "  inflating: train/63.jpg            \n",
+            "  inflating: train/64.jpg            \n",
+            "  inflating: train/68.jpg            \n",
+            "  inflating: train/69.jpg            \n",
+            "  inflating: train/7.jpg             \n",
+            "  inflating: train/70.jpg            \n",
+            "  inflating: train/71.jpg            \n",
+            "  inflating: train/73.jpg            \n",
+            "  inflating: train/75.jpg            \n",
+            "  inflating: train/76.jpg            \n",
+            "  inflating: train/77.jpg            \n",
+            "  inflating: train/79.jpg            \n",
+            "  inflating: train/80.jpg            \n",
+            "  inflating: train/COCO_mul_train_annos.json  \n",
+            "  inflating: train/COCO_train_annos.json  \n",
+            "  inflating: val/1.jpg               \n",
+            "  inflating: val/22.jpg              \n",
+            "  inflating: val/24.jpg              \n",
+            "  inflating: val/3.jpg               \n",
+            "  inflating: val/32.jpg              \n",
+            "  inflating: val/42.jpg              \n",
+            "  inflating: val/62.jpg              \n",
+            "  inflating: val/74.jpg              \n",
+            "  inflating: val/78.jpg              \n",
+            "  inflating: val/8.jpg               \n",
+            "  inflating: val/9.jpg               \n",
+            "  inflating: val/COCO_mul_val_annos.json  \n",
+            "  inflating: val/COCO_val_annos.json  \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "04DkmdVlS3AY"
+      },
+      "source": [
+        "from PIL import Image\n",
+        "Image.open('train/10.jpg')"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "euSCPp8kS9jP",
+        "outputId": "bc3039c4-afb5-464b-f8c6-9d98dfda7645"
+      },
+      "source": [
+        "! head train/COCO_mul_train_annos.json"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{\n",
+            "    \"annotations\": [\n",
+            "        {\n",
+            "            \"area\": 695589.9999999999,\n",
+            "            \"bbox\": [\n",
+            "                3,\n",
+            "                3,\n",
+            "                879,\n",
+            "                677\n",
+            "            ],\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rbKaqiwuTECG"
+      },
+      "source": [
+        "import json\n",
+        "with open('train/COCO_mul_train_annos.json', 'r') as f:\n",
+        "  jd = json.loads(f.read())"
+      ],
+      "execution_count": 148,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DDDy5yvxTPll",
+        "outputId": "250620d8-22f5-4f8f-a6c9-3611d1c3c1fc"
+      },
+      "source": [
+        "jd.keys()"
+      ],
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['annotations', 'categories', 'images', 'info', 'licenses'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 150
+        }
+      ]
     }
   ]
 }
